--- a/app/views/beetle/new.html.erb
+++ b/app/views/beetle/new.html.erb
@@ -1,9 +1,9 @@
 <h1>Beetle#new</h1>
 <%= @error if @error %>
 
-<%= form_for @beetle do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
+<%= form_for @beetle, url: beetle_new_path do |f| %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
 
   <%= f.label :description %>
   <%= f.text_field :description %>
